--- a/hajjteck/app/src/main/res/values/strings.xml
+++ b/hajjteck/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="email">User</string>
     <string name="password">Password</string>
     <string name="password2">repreat Password</string>
+    <string name="title_activity_emergency">Emergency</string>
 </resources>
